--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 
 * {
     margin: 0;
@@ -35,7 +37,6 @@ body {
     font-weight: 400;
     font-size: 20px;
     color: rgb(131, 7, 231);
-    
 }
 
 .conteudo {
@@ -54,6 +55,48 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+}
 
+#paginate {
+    width: 100%;
+    margin: 32px auto;
+}
 
+#paginate .list .item {
+    border-bottom: 1px solid hsl(32, 98%, 12%);
+    padding: 16px 32px;
+}
+
+#paginate .list .item:hover {
+    background-color: rgba(152, 129, 216, 0.918);
+}
+
+#paginate .pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 8px;
+}
+
+#paginate .pagination div {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 14px;
+}
+
+#paginate .pagination div:not(.numbers),
+#paginate .pagination div.numbers div {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    border: solid 1px whitesmoke; 
+}
+
+#paginate .pagination div:not(.numbers):hover,
+#paginate .pagination div.numbers div:hover,
+#paginate .pagination div.numbers div.active {
+    color: var(--primary);
 }
